--- a/rootdir/init.kanuti.usb.rc
+++ b/rootdir/init.kanuti.usb.rc
@@ -34,7 +34,7 @@ on property:sys.usb.config=mtp
     write /sys/class/android_usb/android0/idProduct 0${ro.usb.pid_suffix}
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
-    stop adb
+    start adbd
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=mtp,adb
@@ -53,7 +53,7 @@ on property:sys.usb.config=rndis
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/bDeviceClass 224
     write /sys/class/android_usb/android0/enable 1
-    stop adb
+    start adbd
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=rndis,adb
@@ -72,7 +72,7 @@ on property:sys.usb.config=ptp
     write /sys/class/android_usb/android0/idProduct 9${ro.usb.pid_suffix}
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
-    stop adb
+    start adbd
     setprop sys.usb.state ${sys.usb.config}
 
 on property:sys.usb.config=ptp,adb
@@ -90,5 +90,5 @@ on property:sys.usb.config=charging
     write /sys/class/android_usb/android0/idProduct 3${ro.usb.pid_suffix}
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
-    stop adb
+    start adbd
     setprop sys.usb.state ${sys.usb.config}
